# GAN

./: all_histories.json  generate_dataset.py  models.py  pyproject.toml
models/: Heavy_Generator.pth  Light_Discriminator.pth  Light_Generator.pth  Medium_Generator.pth
